style.css
/* ... */
li {
	list-style-type: none;
}
ul {
	padding-left: 0px;
}
html {
	box-sizing: border-box;
	/* text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased; */
	scroll-behavior: smooth;
}
html:focus-within {
    scroll-behavior: smooth;
}
h1, h2 {
    font-family: 'Bree Serif', serif;
}

/* 		========================
	      MAX to DESKTOP 1440px
        ========================
*/
@media (max-width:1439px) {

/* || NAVIGATION */

.logo img {
    width: 16.08vw;
    display: flex;
}
.navMenu a {
	text-decoration: none;
	color: var(--green);
}
.navMenu { 
    width: 39.957vw; /*50.5%*/ 
	font-family: 'Bree Serif', serif;
    font-style: normal;
    font-weight: 400;
    font-size:  1.64vw;
    line-height: 2.21vw;
}
.navMenu ul {
    display: flex;
    justify-content: space-between;
}
.navElements {
    width: 80%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin: auto;
}
.navBar {
    width: 100%;
    height: 6.19vw;
    position: sticky;
    -webkit-position: sticky;
    top: 0;
    background: var(--bk-menu);
    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.14);
    display: flex;
}

/* || MAIN CONTENT */

.homepage {
    width: 80%;
    margin: auto;
}
.homepage-hero {
    display: grid;
    grid-template-columns: auto auto;
    column-gap: 1.57vw;
    justify-content: space-between;
    align-items: center;
}
.homepage h1{
    color: var(--green);
    font-size: 3.02vw;
    line-height: 3.58vw;/* or 113% */
    letter-spacing: 0.01em;
}
.span1::after{
    content: ",";
    color: var(--red);
    font-size: 3.02vw;
    line-height: 3.37vw;/* or 113% */
    letter-spacing: 0.01em;
}
.span1 {
    font-size: 3.02vw;
    line-height: 100.8%;
    letter-spacing: 0.01em;
    color: var(--red);
}
.homepage h2 {
    font-family: 'Rubik', sans-serif;
    font-weight: 300;
    font-size: 1.4vw;
    color: var(--green);
}
.homepage h2::after{
    content: ".";
    font-family: 'Rubik', sans-serif;
    font-weight: 300;
    font-size: 2.0vw;
    line-height: 2.768vw;
    color: var(--green);
}
.cta-home {
    width: 13.67vw;
    height: 3.06vw;
    background-color: var(--green);
    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
    text-decoration: none;
    font-family: 'Rubik', sans-serif;
    font-size: 1.11vw;
    line-height: 1.32vw;
    letter-spacing: 0.05em;
    color: #FFFFFF;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 2px;
    margin-top: 2.2vw;
}
.hero-image img {
    max-width: 40.3vw;
    margin-top: 0.83vw;
    transform: translateX(3vw);
}

/* || USER EXPERIENCE */

.hero-ux img {
    width: 23.54vw;
}
.user-exp h2 {
    font-family:  'Bree Serif', serif;
    font-size: 2.22vw;
    letter-spacing: 0.0166vw;
    color: var(--dark-green);
}
.user-exp {
    margin: auto;
    width: 100%;
}
.user-exp-team {
    display: flex;
    width: 100%;
}
.user-exp-text {
    margin-top: 5.0vw;
    margin-left: 5.15vw;
    line-height: 1.66vw;
    letter-spacing: 0.0166vw;
    color: var(--dark-green);
    font-size: 1.11vw;
}
.user-exp-text span {
    font-size: 1.11vw;
    border-bottom: 2px solid var(--green);
}
.team-ux {
    font-size: 1.11vw;
}
.part-ux {
    font-size: 1.11vw;
    font-family: 'Rubik', sans-serif;
    font-style: normal;
    font-weight: bold;
    line-height: 1.66vw;
    letter-spacing: 0.0166vw;/*0.02em*/
    margin-top: 2.18vw;
}
.cta-exp {
    width: 13.88vw;
    height: 3.06vw;
    background-color: var(--green);
    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
    text-decoration: none;
    font-family: 'Rubik', sans-serif;
    font-size: 1.11vw;
    color: #FFFFFF;
    display: flex;
    align-items: center;
    justify-content: center;
    margin-bottom: 2.18vw;
    margin-top: 2.18vw;
    border-radius: 2px;
}


/* || FOOTER */

.footBar {
    max-width: 100%;
    height: 9.72vw;
    background: var(--bk-footer);
    box-shadow: 0px -2px 8px rgba(0, 0, 0, 0.14);
    display: flex;
}
.footContent {
    width: 80%;
    margin: auto;
    margin-top: 0.7638vw;
    display: flex;
    justify-content: space-between;
    font-family: 'Rubik', sans-serif;
    font-weight: bold;
    font-size: 0.972vw;
    color: var(--txt-footer);
}
.footContent li {
    transform: translateY(-0.486vw);
}
h4 {
    font-size: 1.11vw;
    margin-bottom: 1.25vw;
    color: var(--ttl-footer);
}
.footServ, .footBlog,.footContact {
    line-height: 1.8;
}
/* .footBlog {
    
} */
.footContact {
    display: flex;
    flex-direction: column;
    align-items: baseline;
    justify-content: space-between;
    margin-left: 4.027vw;
}
.icon-email img {
    width: 1.319vw;
    margin-right: 0.486vw;
    transform: translateY(0.208vw);
}
.icon-fb img {
    width: 0.588vw;
    margin-right: 1.18vw;
    transform: translate(0.347vw, 0.208vw);
}
.icon-link img {
    width: 1.0416vw;
    margin-right: 0.7638vw;
    transform: translate(0.069vw, 0px);
}
.footInfo {
    color: var(--codi-footer);
    display: flex;
    flex-direction: column;
    align-items: baseline;
    justify-content: flex-end;
}
.icon-termeni img {
    width: 1.388vw;
    margin-right: 0.486vw;
    transform: translateY(0.138vw);
}
.icon-anpc img {
    width: 1.25vw;
    margin-right: 0.694vw;
    transform: translateY(0.277vw);
}
.footCodi {
    color: var(--codi-footer);
    text-align: right;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
}
.footCodi img {
    width: 12.1527vw;
    transform: translate(1.388vw, -0.486vw);
}
.footInfo ul {
    line-height: 1.8;
    transform: translateX(1.736vw);
}
.footCodi ul {
    line-height: 1.9;
}
.footContact {
    transform: translateX(3.819vw);
}

}
/* ... */

